implement product over view page 📝

--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 @theme {
   --color-primary: #fbfbfb;
   --color-secondary: #393e46;
-  --color-accent: #c5baff;
+  --color-accent: #483aa0;
   --font-fancy: "Exile", sans-serif;
   --font-main: "Playwrite HU", sans-serif;
 }
